create function working now

--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -9,6 +9,16 @@
 </head>
 <body>
   <h1>Flight List</h1>
+  <nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+      <span class="navbar-brand mb-0 h1">
+        <a href="/flights/new">New Flights</a>
+      <a href="/flights/">All Flights</a>
+      </span>
+    </div>
+  </nav>
+  <br>
+  
   <table>
     <thead>
       <tr>
