--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,11 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: grey;
+  background-color: lightblue;
+  text-align: center;
 }
 
 a {
-  color: #00B7FF;
+  color: red;
 }
+
