--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -8,6 +8,14 @@
 
     <title>Document</title>
 </head>
+<nav class="navbar navbar-light bg-light">
+  <div class="container-fluid">
+    <span class="navbar-brand mb-0 h1">
+      <a href="/flights/new">New Flights</a>
+    <a href="/flights/">All Flights</a>
+    </span>
+  </div>
+</nav>
 
 
 <body>
@@ -38,6 +46,8 @@
     <input type="datetime-local" name="departs">
 <br>    
   <input type="submit" value="Add Flight">
+
+  
 
 </form>
 
